<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <!-- These are the selectable titles in the navigation drawer -->
    <string name="nav_drawer_my_card">My Card</string>
    <string name="nav_drawer_contacts">Contacts</string>
    <string name="nav_drawer_referrals">Referrals</string>
    <string name="nav_drawer_events">Events</string>
    <string name="nav_drawer_invite">Invite</string>
    
    <string name="desc_nav_drawer_item_icon">Item Icon</string>
    
    <string name="action_edit">Edit</string>
    <string name="action_add_event">New Event</string>
    <string name="action_save_event">Save Event</string>
    <string name="action_join_event">Join an Event</string>
    	
	<string name="your_name"> Your Name</string>
	<string name="your_number"> 000&#8211;0000</string>
	<string name="your_email">sample@email.com</string>
	<string name="your_company">Company</string>
	<string name="your_jobTitle">Job Title</string>
	<string name="your_address">Your Address</string>
		
    <string name="app_name">CardBeam</string>
    <string name="hint_enter_text">Enter Text</string>
    <string name="button_send">Send</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_card_view">Card View</string>

    <string name="empty_contact"> Your contact list is empty</string>
    <string name="empty_referral"> Your referral list is empty</string>
    
    <string name="login_login_string_lnkd">Login with LinkedIn</string>
    <string name="login_login_string">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_passwordConfirm">Confirm Password</string>

    <string name="newAccount_string">New Account</string>
    <string name="signup_string">Sign Up</string>
    <string name="SelectCardTemplate"> Choose a card template</string>
    
    <string name="card_flip_view_name_label">Name</string>
    <string name="card_flip_view_phoneNo_label">Phone</string>
    <string name="card_flip_view_email_label">Email</string>

    <string name="appName">CardBeam</string>
    
    <string name="remember_me">Remember me</string>
    
    <!-- This is used in the card flip view more button -->
    <string name="card_flip_view_more">More</string>
    
    <!--  This is used when sending out and email -->
    <string name="email_option">Send email using</string>
    
    <!-- These are are used when editing the card -->
    <string name="name_title"><u>Your name:</u></string>
    <string name="edit_name_hint">Steve Jobs</string>
    <string name="company_title"><u>Company name:</u></string>
    <string name="edit_company_hint">Apple Inc</string>
    <string name="job_title_title"><u>Position title:</u></string>
    <string name="edit_job_title_hint">CEO</string>
    <string name="email_title"><u>Email address:</u></string>
    <string name="edit_email_hint">sj@apple.com</string>
    <string name="phone_title"><u>Phone number:</u></string>
    <string name="edit_phone_hint">408-555-2775</string>
    <string name="address_title"><u>Address:</u></string>
    <string name="edit_address_hint">1 Infinity Loop</string>
    
    <!-- These are are used when creating events -->
    <string name="event_name_title">Event Name:</string>
    <string name="event_name_hint">Christmas Party</string>
    
    <string name="event_host_title">Event Host:</string>
    <string name="event_host_hint">Company Title</string>
    
    <string name="event_location_title"><u>Event Location:</u></string>
    <string name="event_location_hint">Toronto Metro Convention Center</string>
    
    <string name="event_stime_title"><u>Start Time:</u></string>
    <string name="event_stime_hint">Thu, Dec 25, 2014 at 7:00 PM</string>
    
    <string name="event_etime_title"><u>End Time:</u></string>
    <string name="event_etime_hint">Thu, Dec 25, 2014 at 11:00 PM</string>
    
    
    
    <!-- These are used in the event details view -->
    <string name="event_host">Hosted By: %s </string>
    <string name="event_date">From: %1$s to %2$s </string>
    
    <!-- invites -->
    <string name="invite_title">Invite friends and colleagues</string>
    <string name="invite_message">Thank you for taking the time to share CardBeam with your friends and colleagues</string>
    <string name="invite_email">Email</string>
    <string name="invite_sms">SMS</string>
    
    
    
    
    <string name="email_template"><![CDATA[I have found this great app called <a href=www.goo.gl/y5X8b4 > CardBeam</a> that I think you should try out]]></string>
    <string name="sms_template">I have found this great app call CardBeam. You should give it a try by clicking here: goo.gl/y5X8b4</string>
    
</resources>
