<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >
 
    <TextView
        android:id="@+id/event_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />
 
    <EditText
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name_hint" >
 
        <requestFocus />
 
    </EditText>
 
    <TextView
        android:id="@+id/event_host_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_host_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />
 
    <EditText
        android:id="@+id/event_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_host_hint"  />
 
    
    <TextView
        android:id="@+id/event_location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_location_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />
 
    <EditText
        android:id="@+id/event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_location_hint"  />
  
 	<TextView
        android:id="@+id/event_stime_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_stime_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />
 
    <TextView
        android:id="@+id/event_stime"
        style="@android:style/Widget.EditText"
        android:focusableInTouchMode="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_stime_hint"  />
  
    <TextView
        android:id="@+id/event_etime_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_etime_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />
 
    <TextView
        android:id="@+id/event_etime"
        style="@android:style/Widget.EditText"
        android:focusableInTouchMode="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_etime_hint"  />
    
    
</LinearLayout>