<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/card_wrapper_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/card_background"
        android:paddingTop="8dp"
		android:paddingBottom="8dp" >
        
        <ImageView
            android:id="@+id/card_flip_view_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />
		
        <com.jackhxs.cardbank.PagerContainer
	        android:id="@+id/pager_container"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="8dp"
	        android:layout_marginBottom="8dp"
	         >
        
	        <android.support.v4.view.ViewPager
	            xmlns:android="http://schemas.android.com/apk/res/android"
	            android:id="@+id/pager"
	            android:layout_width="328dp"
	            android:layout_height="184dp"
	            android:layout_gravity="center_horizontal"  />
        </com.jackhxs.cardbank.PagerContainer>
        
    </RelativeLayout>

    <ScrollView
        android:id="@+id/card_details_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
		android:layout_below="@id/card_wrapper_layout"
		android:background="@color/light_grey"  >
        
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="16dp" >

			<TextView
			    android:id="@+id/name_title"
			    style="@style/my_card_headers"
			    android:text="@string/name_title" />
			
			<EditText
				android:id="@+id/edit_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/edit_name_hint"
				android:imeOptions="actionNext"
				android:inputType="textPersonName" />

			<TextView
			    android:id="@+id/company_title"
			    style="@style/my_card_headers"
			    android:text="@string/company_title" />

			<EditText
			    android:id="@+id/edit_company"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:ems="10"
			    android:imeOptions="actionNext"
			    android:hint="@string/edit_company_hint" />

			<TextView
			    android:id="@+id/job_title_title"
			    style="@style/my_card_headers"
			    android:text="@string/job_title_title" />

			<EditText
				android:id="@+id/edit_job_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:imeOptions="actionNext"
				android:hint="@string/edit_job_title_hint" />

			<TextView
			    android:id="@+id/email_title"
			    style="@style/my_card_headers"
			    android:text="@string/email_title" />

			<EditText
			    android:id="@+id/edit_email"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:ems="10"
			    android:hint="@string/edit_email_hint"
			    android:inputType="textEmailAddress" />

			<TextView
			    android:id="@+id/phone_title"
			    style="@style/my_card_headers"
			    android:text="@string/phone_title" />
			
			<EditText
			    android:id="@+id/edit_phone"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:ems="10"
			    android:hint="@string/edit_phone_hint"
			    android:inputType="phone" />

			<TextView
			    android:id="@+id/address_title"
			    style="@style/my_card_headers"
			    android:text="@string/address_title" />
			
			<EditText
			    android:id="@+id/edit_address"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:ems="10"
			    android:imeOptions="actionDone"
			    android:hint="@string/edit_address_hint" />

			
		</LinearLayout>
   
    </ScrollView>
 
    <ImageView
       android:id="@+id/imageView1"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_alignTop="@id/card_details_layout"
       android:scaleType="fitXY"
       android:src="@drawable/horizontal_shadow" />
    
    
</RelativeLayout>