<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true" >

    <WebView
        android:id="@+id/webview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:visibility="gone"/>
    
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dip"
        android:layout_marginTop="25dip"
        android:text="@string/appName"
        android:textSize="36sp" />

    <AutoCompleteTextView
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="top"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:completionThreshold="1"
        android:lines="4"
        android:maxLength="760"
        android:width="250dip" />

    
    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:gravity="top"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:lines="4"
        android:maxLength="760"
        android:width="250dip" />

    <CheckBox
        android:id="@+id/rememberMeCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/remember_me" />

     <Button
        android:id="@+id/login_lnkd_button"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="50dip"
        android:background="@drawable/styled_btn"
        android:onClick="signInWithLNKD"
        android:text="@string/login_login_string_lnkd"
        android:width="250dip" />
     
    <Button
        android:id="@+id/login_login_button"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="50dip"
        android:background="@drawable/styled_btn"
        android:onClick="login"
        android:text="@string/login_login_string"
        android:width="250dip" />

    <Button
        android:id="@+id/sign_button"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/styled_btn"
        android:onClick="signup"
        android:text="@string/newAccount_string"
        android:width="250dip" />    

</LinearLayout>