<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true" >
    
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dip"
        android:layout_marginTop="100dip"
        android:text="@string/appName"
        android:textSize="36sp" />

    <AutoCompleteTextView
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="top"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:lines="4"
        android:maxLength="760"
        android:width="250dip" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="top"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:lines="4"
        android:maxLength="760"
        android:width="250dip" />
    
    <EditText
        android:id="@+id/login_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="top"
        android:hint="@string/login_passwordConfirm"
        android:inputType="textPassword"
        android:lines="4"
        android:layout_marginBottom="25dp"
        android:maxLength="760"
        android:width="250dip" />
   
    <Button
        android:id="@+id/signup_button"
        android:background="@drawable/styled_btn"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:onClick="signup"
        android:text="@string/signup_string"
        android:width="250dip" 
        />

</LinearLayout>
